# jade-signer-rpc

./: .dockerignore  .gitignore  .travis.yml  Cargo.toml  Changelog.md  README.md  cli.yml  fib.sh  openrpc.json  packages-microsoft-prod.deb.1  releaserc.toml  usage.txt
.circleci/: config.yml
.docker/: Dockerfile
benches/: bench_storage.rs
ci/: boot_wine_env.sh  install_rust.sh
jade-rs/: Cargo.toml
jade-rs/src/core/: error.rs
jade-rs/src/keystore/: cipher.rs
jade-signer-rs/: Cargo.toml  README.md  openrpc.json  rustfmt.toml
jade-signer-rs/benches/: bench_crypto.rs
jade-signer-rs/src/: lib.rs
jade-signer-rs/src/contract/: error.rs  mod.rs
jade-signer-rs/src/core/: address.rs  error.rs  signature.rs  transaction.rs
jade-signer-rs/src/hdwallet/: bip32.rs  keystore.rs  mod.rs
jade-signer-rs/src/keystore/: cipher.rs  error.rs  kdf.rs  mod.rs  prf.rs
jade-signer-rs/src/keystore/serialize/: address.rs  crypto.rs  error.rs  mod.rs
jade-signer-rs/src/mnemonic/: error.rs  language.rs  mod.rs
jade-signer-rs/src/rpc/: common.rs  error.rs  mod.rs  serialize.rs  serves.rs
jade-signer-rs/src/storage/: mod.rs  storage_ctrl.rs
jade-signer-rs/src/storage/addressbook/: mod.rs
jade-signer-rs/src/storage/keyfile/: fs.rs  mod.rs
jade-signer-rs/src/util/: mod.rs  rlp.rs
jade-signer-rs/tests/: addressbook_test.rs  keystore_test.rs
signer/: Cargo.toml  README.md  openrpc.json
signer/docs/: usage.adoc
signer/src/: main.rs
signer/src/cmd/: account.rs  arg_handlers.rs  error.rs  mod.rs  transaction.rs
signer/src/rpc/: mod.rs
src/: lib.rs  main.rs
src/cmd/: mod.rs
src/contract/: error.rs  mod.rs
src/core/: address.rs  error.rs  signature.rs  transaction.rs
src/keystore/: cipher.rs  error.rs  kdf.rs  mod.rs  prf.rs
src/keystore/serialize/: byte_array.rs  error.rs  mod.rs
src/mnemonic/: error.rs  hd_path.rs  language.rs  mod.rs
src/rpc/: common.rs  error.rs  mod.rs  serves.rs
src/signer/: mod.rs
src/signer/cmd/: account.rs  arg_handlers.rs  error.rs  mod.rs
src/storage/: mod.rs  storage_ctrl.rs
src/storage/addressbook/: error.rs
src/storage/contracts/: mod.rs
src/storage/keyfile/: db.rs  error.rs  fs.rs  mod.rs
src/util/: crypto.rs  mod.rs  rlp.rs  typed.rs
tests/: addressbook_test.rs  keystore_test.rs  openrpc.rs
