[package]
name = "jade-signer"
version = "0.1.0"
authors = ["Constantine Kryvomaz <kostiyantynk@gmail.com>", "Mike Lubinets <me@mkl.dev>"]
homepage = "http://etclabscore.com"
repository = "https://github.com/etclabscore/jade-signer-rpc"
readme = "README.md"
license = "Apache-2.0"
edition = "2018"
publish = false

[badges]
travis-ci = { repository = "etclabscore/jade-signer-rs" }
appveyor = { repository = "etclabscore/jade-signer-rs" }
circle-ci = { repository = "etclabscore/jade-signer-rs" }

[dependencies]
time = "0.1"
futures = "0.1"
jsonrpc-core = "8.0.0"
jsonrpc-http-server = "8.0.0"
lazy_static = "1.3"
log = "0.4"
regex = "1.1"
hex = "0.3"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
glob = "0.3"
uuid = { version = "0.7", features = ["serde", "v4"] }
secp256k1 = { version = "0.15", features = ["recovery", "rand"] }
rand = "0.6"
byteorder= "1.2"
ethabi = "2.0.0"
num = "0.2.0"
bitcoin = "0.13"
aes-ctr = "0.1.0"
sha2 = "0.7"
sha3 = "0.7"
pbkdf2 = "0.2"
scrypt = "0.1"
hmac = "0.6"
dirs = "2.0.1"
chrono = "0.4.6"
rpassword = "2.1.0"
text_io = "0.1.7"
clap = { version = "2.32.0", features = ["yaml", "color"] }
env_logger = "0.6.0"
rocksdb = "0.12"
hyper = "0.12"
reqwest = "0.9"
http = "0.1.15"
url = "1.7.2"
failure = "0.1.5"

[dev-dependencies]
tempdir = "0.3.7"
quickcheck = "0.8.2"
# quickcheck_macros = "0.4"

[features]
default = []
nightly = []
fixed-seed = []

