[package]
name = 'jade-signer'
authors = [
    'Constantine Kryvomaz <kostiyantynk@gmail.com>',
    'Mike Lubinets <me@mkl.dev>',
]
homepage = 'http://etclabscore.com'
repository = 'https://github.com/etclabscore/jade-signer-rpc'
readme = 'README.md'
license = 'Apache-2.0'
edition = '2018'
publish = false
version = '0.2.1'
[badges.travis-ci]
repository = 'etclabscore/jade-signer-rs'

[badges.appveyor]
repository = 'etclabscore/jade-signer-rs'

[badges.circle-ci]
repository = 'etclabscore/jade-signer-rs'

[dependencies]
time = '0.1'
futures = '0.1'
jsonrpc-core = '8.0.0'
jsonrpc-http-server = '8.0.0'
lazy_static = '1.3'
log = '0.4'
regex = '1.1'
hex = '0.3'
serde_json = '1.0'
glob = '0.3'
rand = '0.6'
byteorder = '1.2'
ethabi = '8.0.1'
num = '0.2.0'
bitcoin = '0.20'
aes-ctr = '0.1.0'
sha2 = '0.7'
sha3 = '0.7'
pbkdf2 = '0.2'
scrypt = '0.1'
hmac = '0.6'
dirs = '2.0.1'
chrono = '0.4.6'
rpassword = '2.1.0'
text_io = '0.1.7'
env_logger = '0.6.0'
rocksdb = '0.12'
hyper = '0.12'
reqwest = '0.9'
http = '0.1.15'
url = '1.7.2'
failure = '0.1.5'
primitive-types = '0.3.0'

[dependencies.serde]
version = '1.0'
features = ['derive']

[dependencies.uuid]
version = '0.7'
features = [
    'serde',
    'v4',
]

[dependencies.secp256k1]
version = '0.15'
features = [
    'recovery',
    'rand',
]

[dependencies.clap]
version = '2.32.0'
features = [
    'yaml',
    'color',
]

[dev-dependencies]
tempdir = '0.3.7'
quickcheck = '0.8.2'
base64 = '0.10.1'

[features]
default = []
nightly = []
fixed-seed = []
