[package]
name = "jade_signer_rs"
version = "0.1.0"
authors = ["Constantine Kryvomaz <kostiyantynk@gmail.com>"]
description = "Ethereum Classic secure account management core libary"
homepage = "http://etclabscore.com"
repository = "https://github.com/etclabscore/jade-rs"
documentation = "https://docs.rs/jade-core"
keywords = ["ethereum-classic", "blockchain", "ffi", "crypto-wallet", "cold-storage"]
categories = ["embedded", "external-ffi-bindings"]
readme = "README.md"
license = "Apache-2.0"
edition = "2018"

[badges]
travis-ci = { repository = "etclabscore/jade-signer-rs" }
appveyor = { repository = "etclabscore/jade-signer-rs" }

[lib]
name = "jade_signer_rs"
path = "src/lib.rs"
#crate-type = ["rlib", "cdylib"]

[dependencies]
time = "0.1"
futures = "0.1"
jsonrpc-core = "8.0.0"
jsonrpc-http-server = "8.0.0"
lazy_static = "1.3"
log = "0.4"
regex = "1.1"
hex = "0.3"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
glob = "0.3"
uuid = { version = "0.5", features = ["serde", "v4"] }
secp256k1 = { version = "0.9", features = ["rand"] }
rand = "0.3"
byteorder= "1.2"
ethabi = "2.0.0"
num = "0.2.0"
bitcoin = "0.13"
aes-ctr = "0.1.0"
sha2 = "0.7"
sha3 = "0.7"
pbkdf2 = "0.2"
scrypt = "0.1"
hmac = "0.6"
dirs = "2.0.1"
# optional dependencies
rocksdb =  { version = "0.12", optional = true }
hyper = { version = "0.12", optional = true }
reqwest = { version = "0.9", optional = true }
chrono = "0.4.6"

[dev-dependencies]
tempdir = "0.3.7"
quickcheck = "0.8.2"
# quickcheck_macros = "0.4"

[features]
default = ["http", "rocksdb"]
http = ["hyper", "reqwest"]
fs-storage = []
