[package]
name = "signer"
version = "0.1.0"
authors = ["Constantine Kryvomaz <kostiyantynk@gmail.com>"]
homepage = "http://etclabscore.com"
repository = "https://github.com/etclabscore/jade-signer-rpc/signer"
keywords = ["ethereum-classic", "blockchain", "cold-storage", "openrpc"]
categories = ["console", "bash"]
readme = "README.md"
license = "Apache-2.0"

[badges]
travis-ci = { repository = "etclabscore/jade-signer-rpc" }
appveyor = { repository = "etclabscore/jade-signer-rpc" }

[dependencies]
log = "0.4.6"
jsonrpc-core = "10.0.1"
serde = "1.0.87"
hex = "0.3.2"
lazy_static = "1.2.0"
serde_json = "1.0.38"
serde_derive = "1.0.87"
jade_signer_rs = {path = "../jade-signer-rs"}
regex = "1.1.0"
hyper = "0.12.23"
reqwest = "0.9.9"
http = "0.1.15"
rpassword = "2.1.0"
url = "1.7.2"
text_io = "0.1.7"
clap = { version = "2.32.0", features = ["yaml", "color"] }
env_logger = { version = "0.6.0", optional = true }
clippy = { version = "0.0.302", optional = true }

[dev-dependencies]
tempdir = "0.3.7"
quickcheck = "0.8.1"
# quickcheck_macros = "0.4"

[features]
default = ["cli"]
cli = ["env_logger"]
dev = ["clippy"]
